# Telemetry-Simulation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_cmake.bat  build_compile.bat  build_run.bat  physicsEngine.cpp  physicsEngine.h  track_sim.cpp  trackt1_data.csv
.github/workflows/: build-lambda.yml
data/: circuit_alpha.csv  monza.csv  monza_gen.py  strategy_soft.json  strategy_test.json  test_hard.json  test_soft.json  test_twostop.json
deployment_src/: handler.js
include/: physics.hpp  strategy.hpp  types.hpp
output/: telemetry.json
scripts/: gen_monza.js
src/: main.cpp  physics.cpp  physicsEngine.cpp  simulation.cpp  strategy.cpp  telemetry.cpp
web/: .env.production  index.html  package-lock.json  package.json
web/public/: telemetry.json
web/src/: App.css  App.jsx
web/src/components/: CamberDisplay.jsx  CarDiagram.jsx  CarModel.jsx  CarModelViews.jsx  GForceMeter.jsx  GearDisplay.jsx  Header.jsx  LapTimePanel.jsx  PlaybackControls.jsx  RevCounter.jsx  Speedometer.jsx  StrategyPanel.jsx  TelemetrySidebar.jsx  ThrottleBrakeBar.jsx  TimeChart.jsx  TireDetailPanel.jsx  TirePressure.jsx  TireTempDisplay.jsx  TrackMap.jsx  WearIndicators.jsx
web/src/hooks/: usePlayback.js  useTelemetryData.js
web/src/utils/: colors.js  cornerDetection.js  interpolate.js  racingLine.js  speedEnvelope.js  tireModel.js
